Fix: fixed z-index of info pop up

--- a/frontend/src/pages/Dashboard/DashboardHome/Dashboard.module.css
+++ b/frontend/src/pages/Dashboard/DashboardHome/Dashboard.module.css
@@ -82,6 +82,7 @@
   text-align: center;
   color: white;
   padding: 1rem;
+  z-index: 9999;
 }
 
 .infoCard > div {
